@@ -6,6 +6,7 @@
 /AdminLengowMainSetting14.php|0ec3a595ef5eed590851fe1207cb5c3d
 /AdminLengowOrder14.php|f6e68095c05017d763857d28cb38842f
 /AdminLengowOrderSetting14.php|51383d4361db05be92ba948ccd3bb434
+/config/index.php|eb18f895c85303c2ced77482ec4ab525
 /backward_compatibility/TaxCalculator.php|700cf63e10a80994045b622543c7fbd4
 /backward_compatibility/backward.php|598c759ffc80fbfbb589eaec30378c62
 /backward_compatibility/Display.php|7695746b57defc51f394df99b72a6584
@@ -18,20 +19,20 @@
 /classes/models/LengowPaymentModule.php|d45945f62754580f18e27a65e7dc422d
 /classes/models/LengowMethod.php|784792585a979cc94281d204a59cf827
 /classes/models/LengowCustomer.php|9876528937cc0eb70737950a31a7d559
-/classes/models/LengowSync.php|8550692bdd4d2d00917eeefb34d18c3b
+/classes/models/LengowSync.php|7555ea0cd0601515c81db2642e36ba1e
 /classes/models/LengowCountry.php|9272660d9cb039e52ef2fd1bfca33caa
 /classes/models/LengowHook.php|b46c2bffdce1124e1c20c3676f2cfaa4
 /classes/models/LengowImport.php|86018894eae006f8184bba9b693d3b7c
 /classes/models/LengowFeed.php|63e52b29456e3402cfaa5e8472f7f318
 /classes/models/LengowCheck.php|a1ef4482c94d869438de225373cefd65
 /classes/models/LengowBackup.php|b925fe77481a09e3b1cda3506d809bc0
-/classes/models/LengowInstall.php|1026b54183c1d40276579f769e634938
+/classes/models/LengowInstall.php|94c17a3f00c61838050fd159fffe25c7
 /classes/models/LengowOrderDetail.php|4662cac96615a0a8287a6f2a607bc4bd
 /classes/models/LengowList.php|62e580e27ac84c03d970408c1f6d8210
 /classes/models/LengowCarrier.php|e19c91ee84d60a59adbd68227eed2e00
 /classes/models/LengowTaxRule.php|809008cc79f5fa843fa87ac67f401a1e
 /classes/models/LengowCurrency.php|f2b2f0e3b8da77da54ce4cb70a4e88c0
-/classes/models/LengowMain.php|034886ea71a7a9b2d6580006d3299032
+/classes/models/LengowMain.php|2278ba466ce0fc35439c6825cbe8688b
 /classes/models/LengowLog.php|45d6aa3a0e6bb30fb02fc7e496d4f0b0
 /classes/models/LengowGender.php|7ca9cd51973b5304383a07cf2df7b4c4
 /classes/models/LengowOrder.php|0e151e58045f5c60294bf81064253742
@@ -42,14 +43,14 @@
 /classes/models/LengowTranslation.php|9b660d426e09a54cf0cdb5fd070825b6
 /classes/models/LengowFile.php|0db945b304aaef965e531dbc8da644d0
 /classes/models/LengowShop.php|66a729bfcc41720eb40a69e21c04d666
-/classes/models/LengowConnector.php|5135543538471220aa187c85fce2c119
+/classes/models/LengowConnector.php|fa7bce61be85ea9166818875fe3454bc
 /classes/models/LengowException.php|c25029800cbc155b26375415141e8824
 /classes/models/LengowCart.php|d9fbb497089ceb48d5e4b713f736452e
-/classes/models/LengowMarketplace.php|9a1cf37d27f932be9a35dbdc5606cff5
+/classes/models/LengowMarketplace.php|4fe89065135f280c0f8f2d3c55f03b25
 /classes/models/LengowAddress.php|a382676c3e6fa40eaac0a9afcacd17e1
 /classes/models/index.php|ed8e273082cc0a58535dc2b454435f38
 /classes/models/LengowProduct.php|b007d33d98ab5165f87269d6cd114114
-/classes/models/LengowConfiguration.php|4218a78f74152df9402a7cb8aaead29e
+/classes/models/LengowConfiguration.php|10aecfb03034439ebfb6cfe2fbb26d9e
 /classes/index.php|ed8e273082cc0a58535dc2b454435f38
 /classes/controllers/LengowController.php|22f041328b5dbd01ba03d29b70b48a76
 /classes/controllers/LengowHomeController.php|e613ab0dddecf52440768a813c814d54
