@@ -4,6 +4,7 @@ Version 3.0.6
 
     - Bugfix: [export] Improved deletion of duplicate headers
     - Bugfix: [action] Management of orders waiting to return from the marketplace
+    - Registering marketplace data in a json file
 
 =============================================================
 Version 3.0.5
